# emoji-generator

./: README.md  pyproject.toml
src/emoji_generator/: cli.py  omya.py  stamp.py
