[project]
name = "emoji-generator"
version = "0.1.0"
description = "Generate emoji-style PNG images from the command line."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "cyclopts",
    "numpy",
    "pillow",
]

[project.scripts]
emoji-generator = "emoji_generator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/emoji_generator"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]  # Erreurs, undefined, warnings

[tool.ruff.format]
line-length = 100